feat: Add CustomException and ErrorCode